duniverse/lwt/test/ppx_expect/cases/let_3.expect
File "let_3.ml", line 2, characters 33-35:
Error: This pattern matches values of type unit
       but a pattern was expected which matches values of type int
