duniverse/lwt/test/ppx_expect/cases/let_3.ml
let _ =
  let%lwt () = Lwt.return () and () = Lwt.return 5 in
  Lwt.return ();;
